@@ -2,6 +2,11 @@ v0.12.0
 * Subscription to update the substitution list periodically from an URL.
 * Removed compatibility with Firefox 1.5 and 2.
 * Compatibility with Firefox 3.5b4.
+* String changes:
+  - foxreplace.properties: new: invalidSubscriptionUrl.
+  - options.dtd: new: subscriptionCheckBox.label, subscriptionCheckBox.accesskey,
+    subscriptionUrl.label, subscriptionUrl.accesskey, subscriptionPeriod.label,
+    subscriptionPeriod.accesskey.
 
 v0.11.0 (25-4-2009)
 * Import from URL.
